GNOME Bugzilla – Bug 615963
Nautilus gives Could not display "computer:///". error when unmounting a volume for the first time for that login
Last modified: 2011-04-04 17:39:22 UTC
(This bug was orignally reported at https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/554963 , which has some additional files collected automatically from the crash) Nautilus gives Could not display "computer:///". error when unmounting a volume for the first time for that login instead of successfully opening the computer:/// location. To reproduce: Login to a user. (I'm using the lucid daily image for 4-3-2010 here) Open the home folder for the user in nautilus. Use the sidebar to open a volume. (Doesn't seem to matter if it was previously mounted or not) Unmount the volume. Notice Error saying " Could not display "computer:///". Error: Location is already mounted Please select another viewer and try again. " Notice that if you do this test again, without logging out and then back in the error will not happen a second time. ProblemType: Bug DistroRelease: Ubuntu 10.04 Package: nautilus 1:2.30.0-0ubuntu3 ProcVersionSignature: Ubuntu 2.6.32-19.28-generic 2.6.32.10+drm33.1 Uname: Linux 2.6.32-19-generic x86_64 Architecture: amd64 Date: Sat Apr 3 20:58:43 2010 ExecutablePath: /usr/bin/nautilus ProcEnviron: LANG=en_US.utf8 SHELL=/bin/bash SourcePackage: nautilus XsessionErrors: (polkit-gnome-authentication-agent-1:2973): GLib-CRITICAL **: g_once_init_leave: assertion `initialization_value != 0' failed
This is still happens to me on Ubuntu Maverick's Daily image for 6-13-2010, which has nautilus version 2.30.1 .
If the first thing you do after login is go to computer:/// and then mount/unmount a volume - do you still get this error message then?
I tried going to computer:/// first and then unmounting a volume and nautilus worked as it should. The bug still happens if you unmount a volume while it is open in the browser and then nautilus tries to go to computer:/// for the first time for that login.
If you restart nautilus (killall nautilus) - does the same thing happen then?
Hm, I can't seem to reproduce this any more. I guess we can mark this bug as closed and hope it's fixed. (Do they have an accidentally fixed tag? :) I'm not sure if I should put it as invalid or fixed? I'll take my best guess, but go ahead and change it to whatever it should be.
Erik, thanks for the update. Marking as OBSOLETE.
I face this issue regularly on my netbook with nautilus 2.32.2.1 are there logs that might be useful?
I (the original reporter) forgot about this bug. I still come across it every now and then. So the status should be changed to open or something like that. I, like Omer, would be willing to try to get logs or other bug info if I knew what to get. (I tried to change the bug status, but I'm not very used to bugzilla, so if it should be something else, let me know)
I should also say that I can confirm that this bug exists, but I didn't see that option as the bug status.
Created attachment 185069 [details] [review] patch application: don't redirect windows on computer:// when unmounting It's confusing now that we don't have a desktop. Redirect to the user home instead. This also has the side effect of fixing
Pushed to master now.