application: don't redirect windows on computer:// when unmounting

It's confusing now that we don't have a desktop. Redirect to the user
home instead.

This also has the side effect of fixing
https://bugzilla.gnome.org/show_bug.cgi?id=615963